# gmatpyplus

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yaml
examples/: 001_Creating_a_Spacecraft.py  basic-propagate.py  example.py  finite_burn.py  minimum_command_propagate.py  minimum_propagate_using_defaults.py  propagate_maneuver.py  use_with_matplotlib.py
examples/logs/: GMAT-Log-Tut01_SimulatingAnOrbit.txt  GMAT-Log-basic-propagate.txt  GMAT-Log-example.txt  GMAT-Log-finite_burn.txt  GMAT-Log-minimum_command_propagate_using_defaults.txt  GMAT-Log-propagate_maneuver.txt  GMAT-Log-use_with_matplotlib.txt
examples/scripts/: Tut01_SimulatingAnOrbit.script  basic-propagate.script  example.script  finite_burn.script  propagate_maneuver.script
examples/tutorials/: Tut01_SimulatingAnOrbit.py  Tut02_SimpleOrbitTransfer.py  Tut03_Target_FiniteBurn_To_Raise_Apogee.py  Tut04_Mars_B-Plane_Targeting.py
examples/work_in_progress/: minimum_command_propagate.py  use_with_matplotlib.py
gmatpyplus/: __init__.py  api_funcs.py  basics.py  burn.py  commands.py  executive.py  gmatpy_classes.txt  hardware.py  interpreter.py  load_gmat.py  orbit.py  parameter.py  solver.py  spacecraft.py  utils.py
plugins/: README.md
plugins/debug/gmatpy/: __init__.py
plugins/gmatpy/_py311/: _navigation_py.pyd  _station_py.pyd  navigation_py.py
plugins/gmatpy/_py312/: _navigation_py.pyd  _station_py.pyd  gmat_py.py
plugins/gmatpy/_py313/: _station_py.pyd
plugins/gmatpy/_py314/: _station_py.pyd
source/: conf.py  examples.rst  gmatpyplus.rst  index.rst
tests/: __init__.py  test_spacecraft.py
