[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

## Hatch config
# Gets project version from releases on VCS.
[tool.hatch.version]
source = "vcs"
[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

# Build hook
[tool.hatch.build.hooks.vcs]
version-file = "_version.py"
[tool.hatch.metadata.hooks.vcs.urls]
Homepage = "https://github.com/weasdown/gmatpyplus"
source_archive = "https://github.com/weasdown/gmatpyplus/releases/{commit_hash}.zip"
Issues = "https://github.com/weasdown/gmatpyplus/issues/"

# Metadata hook
[tool.hatch.metadata.hooks.vcs]

## General project config
[project]
name = "gmatpyplus"
authors = [
  { name="William Easdown Babb", email="weasdown99@gmail.com" },
]
description = "An extra wrapper for the GMAT Python API to simplify setting up mission simulations."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy > 2.0.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",

    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
#    "Topic :: Orbital Mechanics :: Astrodynamics",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dynamic = [
  "version",    # Enables dynamic versioning.
  "urls",       # Enables metadata hook
]
